# Clean-Backup

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  explain_phash.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
deploy/demo/: README.md  SOURCES.md  __init__.py  download_seed_media.sh  render.yaml  reset_demo.py  seed_demo_db.py
docs/: RECORDING.md
phash_rs/: Cargo.toml  README.md  build.sh  pyproject.toml
phash_rs/src/: duplicate.rs  hash.rs  lib.rs
src/: compressor.py  config.py  constants.py  demo.py  duplicate_handler.py  logger.py  metadata.py  organiser.py  phash.py  undo_manager.py  web_app.py
src/classify/: __init__.py  apply_org.py  category_config.py  db.py  pipeline.py  stage_document.py  stage_exif.py  stage_face_detect.py  stage_face_recognize.py  stage_scene.py  tag_resolver.py
src/classify/models/: __init__.py  download_models.py
src/cloud/: __init__.py  credential_store.py  manifest.py  provider_base.py  provider_gdrive.py  provider_s3.py  sync_pipeline.py
src/watcher/: __init__.py  api.py  daemon.py  db.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  styles.css
web/src/components/: WatcherSettings.jsx
