[project]
name = "clean-backup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "hachoir>=3.3.0",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "tqdm>=4.66.0",
    "onnxruntime>=1.17.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "watchdog>=6.0.0",
]
